# multi-agent-project

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  init.sql  setup.ps1
.claude/agents/: app-architecture-designer.md  reality-grounded-researcher.md  venv-library-archeologist.md
backend/: .dockerignore  Dockerfile  add_workers.py  database.py  main.py  payroll.py  pyproject.toml
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App-optimized.vue  App-original.vue  App.vue
frontend/src/components/: CrudView.vue  EmployeeView.vue  ModalComponent.vue  PDFView.vue  RolesView.vue  SearchControls.vue  SitesView.vue  TableComponent.vue  TimesheetView.vue
frontend/src/composables/: useCrud.js  useTranslations.js
